--- a/fl/h69.html
+++ b/fl/h69.html
@@ -2,7 +2,7 @@
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width">
 
-    <title>测试讯响隐私政策</title>
+    <title>讯响隐私政策</title>
     <style>
         <!--
         /* Font Definitions */
@@ -180,8 +180,8 @@
 
 <div class="WordSection1" style="layout-grid:15.6pt">
 
-    <p class="MsoNormal"><b><span style="font-size:14.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">发布日期：2025年06月20日</span></b></p>
-    <p class="MsoNormal"><b><span style="font-size:14.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">更新日期：2025年06月20日</span></b></p>
+    <p class="MsoNormal"><b><span style="font-size:14.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">发布日期：2025年07月20日</span></b></p>
+    <p class="MsoNormal"><b><span style="font-size:14.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">更新日期：2025年07月20日</span></b></p>
     <br>
     <br>
 
