--- a/fl/h71.html
+++ b/fl/h71.html
@@ -444,6 +444,34 @@
             <td
                     style="border-bottom-color:#000000; border-bottom-style:solid; border-bottom-width:0.75pt; border-left-color:#000000; border-left-style:solid; border-left-width:0.75pt; border-right-color:#000000; border-right-style:solid; border-right-width:0.75pt; border-top-color:#000000; border-top-style:solid; border-top-width:0.75pt; padding-left:5.03pt; padding-right:5.03pt; vertical-align:middle; width:95.7pt">
                 <p style="margin:0pt; text-align:center"><span
+                        style="background-color:#ffffff; font-family:微软雅黑; font-size:6.5pt; font-style:normal; text-transform:none">网易云信SDK</span>
+                </p>
+            </td>
+            <td
+                    style="border-bottom-color:#000000; border-bottom-style:solid; border-bottom-width:0.75pt; border-left-color:#000000; border-left-style:solid; border-left-width:0.75pt; border-right-color:#000000; border-right-style:solid; border-right-width:0.75pt; border-top-color:#000000; border-top-style:solid; border-top-width:0.75pt; padding-left:5.03pt; padding-right:5.03pt; vertical-align:middle; width:95.7pt">
+                <p style="margin:0pt"><span
+                        style="background-color:#ffffff; font-family:微软雅黑; font-size:6.5pt; font-style:normal; text-transform:none">在使用软件IM客服功能的时候，需要授权内存读写权限，以便存储您的聊天记录。需要授权定位权限，以便发送位置信息。需要授权录音权限，以便发送语音信息。这样才能为客户提供更完善，体验更好的在线客服服务。</span><span
+                        style="background-color:#ffffff; font-family:微软雅黑; font-size:6.5pt; font-style:normal; text-transform:none"></span>
+                </p>
+            </td>
+            <td
+                    style="border-bottom-color:#000000; border-bottom-style:solid; border-bottom-width:0.75pt; border-left-color:#000000; border-left-style:solid; border-left-width:0.75pt; border-right-color:#000000; border-right-style:solid; border-right-width:0.75pt; border-top-color:#000000; border-top-style:solid; border-top-width:0.75pt; padding-left:5.03pt; padding-right:5.03pt; vertical-align:middle; width:95.75pt">
+                <p style="margin:0pt; text-align:center"><span
+                        style="background-color:#ffffff; font-family:微软雅黑; font-size:6.5pt; font-style:normal; text-transform:none;color:#f00;">设备信息、IMEI、位置信息，音频信息</span>
+                </p>
+            </td>
+            <td
+                    style="border-bottom-color:#000000; border-bottom-style:solid; border-bottom-width:0.75pt; border-left-color:#000000; border-left-style:solid; border-left-width:0.75pt; border-right-color:#000000; border-right-style:solid; border-right-width:0.75pt; border-top-color:#000000; border-top-style:solid; border-top-width:0.75pt; padding-left:5.03pt; padding-right:5.03pt; vertical-align:middle; width:95.75pt">
+                <p style="margin:0pt"><span
+                        style="background-color:#ffffff; font-family:微软雅黑; font-size:6.5pt; font-style:normal; text-transform:none">杭州朗和科技有限公司  隐私权政策链接/官网：https://yunxin.163.com/im</span>
+                </p>
+            </td>
+        </tr>
+
+ <tr>
+            <td
+                    style="border-bottom-color:#000000; border-bottom-style:solid; border-bottom-width:0.75pt; border-left-color:#000000; border-left-style:solid; border-left-width:0.75pt; border-right-color:#000000; border-right-style:solid; border-right-width:0.75pt; border-top-color:#000000; border-top-style:solid; border-top-width:0.75pt; padding-left:5.03pt; padding-right:5.03pt; vertical-align:middle; width:95.7pt">
+                <p style="margin:0pt; text-align:center"><span
                         style="background-color:#ffffff; font-family:微软雅黑; font-size:6.5pt; font-style:normal; text-transform:none">极光推送 - JPush SDK</span>
                 </p>
             </td>
