--- a/fl/h75.html
+++ b/fl/h75.html
@@ -183,8 +183,8 @@
 
     <!--<h1><span-->
     <!--style='font-size:15.0pt;font-family:"微软雅黑","sans-serif"'>尚品-JR隐私政策</span></h1>-->
-    <p class="MsoNormal"><b><span style="font-size:14.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">发布日期：2025年07月20日</span></b></p>
-    <p class="MsoNormal"><b><span style="font-size:14.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">更新日期：2025年07月20日</span></b></p>
+    <p class="MsoNormal"><b><span style="font-size:14.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">发布日期：2025年08月16日</span></b></p>
+    <p class="MsoNormal"><b><span style="font-size:14.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">更新日期：2025年08月16日</span></b></p>
     <br>
     <br>
 
@@ -231,15 +231,7 @@
 
     <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">为了过滤您手机无法使用的软件，尚品-JR会收集您<b>手机的系统版本号、屏幕分辨率、运行内存、剩余存储空间信息，</b>并依据这些信息排除您手机无法使用的软件，以保证您在尚品-JR下载的软件都可安装使用。</span></p>
 
-    <p class="MsoNormal"><span style="color:red;font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（二）传感器列表权限</span></p>
-
-    <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">为实现</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">尚品-JR</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">实时计步的功能，我们需要<span lang="EN">/</span>获取传感器列表<b></b></span><b><span style="font-family:
-&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span></b><b><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">，</span></b><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">收集这些信息是为了帮助您完成</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">尚品-JR计步功能</span><span style="font-family:
-&quot;微软雅黑&quot;,&quot;sans-serif&quot;">此功能不会获取用户信息。</span><span style="font-family:
-&quot;微软雅黑&quot;,&quot;sans-serif&quot;">请放心使用。</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span><span lang="EN" style="font-family:
-&quot;微软雅黑&quot;,&quot;sans-serif&quot;">-</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span></p>
-
-    <p class="MsoNormal"><span style="color:red;font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（三）复制和粘贴版权限</span></p>
+    <p class="MsoNormal"><span style="color:red;font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（二）复制和粘贴版权限</span></p>
 
     <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">为实现</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">尚品-JR</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">复制颜色的功能，我们需要<span lang="EN">/</span>使用复制功能<b></b></span><b><span style="font-family:
 &quot;微软雅黑&quot;,&quot;sans-serif&quot;">和</span></b><b><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">粘贴板功能，</span></b><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">收集这些信息是为了帮助您完成</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">尚品-JR</span><span style="font-family:
@@ -247,6 +239,14 @@
 &quot;微软雅黑&quot;,&quot;sans-serif&quot;">请放心使用。</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span><span lang="EN" style="font-family:
 &quot;微软雅黑&quot;,&quot;sans-serif&quot;">-</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span></p>
 
+
+    <p class="MsoNormal"><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（</span><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">三</span><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">）从外部第三方间接收集的您的个人信息</span></p>
+
+    <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">目前</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">尚品-JR</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">不会主动从第三方获取您的个人信息，如果未来业务发展需要从第三方间接获取您的个人信息，我们会在获取前向您明示个人信息的来源、类型及使用范围。如果</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">尚品-JR</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">开展业务需要进行的个人信息处理活动超出了您向第三方授权同意的处理范围，我们将在处理您的个人信息前征得您的明示同意。我们亦将严格遵守相关法律规定，要求第三方保障其提供的信息的合法性。</span></p>
+
+    <p class="MsoNormal"><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（</span><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">九</span><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">）解决您的问题</span></p>
+
+    <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">您可以通过本款产品向我们反馈您使用本款产品中遇到的问题。如果您没有注册我们的账号，您需要向我们提交您的手机号码、邮箱或<span lang="EN">QQ</span>号码以便我们能联系您并对您反馈的问题进行解答。如果您注册了我们的账号，您亦可以通过登录用户中心向我们反馈问题。在您使用客服或其他用户响应功能时，我们可能还会需要收集<b>您的如下个人敏感信息：联系方式（您与我们联系时使用的手机号码、邮箱或<span lang="EN">QQ</span>号码或您向我们主动提供的其他联系方式）、您与我们的沟通信息（包括文字<span lang="EN">/</span>图片<span lang="EN">/</span>音视频<span lang="EN">/</span>通话记录形式）、与您需求相关联的其他必要信息。</b>我们会通过分析前段中提到的信息找出问题原因并努力解决问题。您在反馈意见中所提供的联系方式，只会用于我们的客服与您沟通与反馈，除征得用户明确同意和法律明确规定外，</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">我</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">司不会向任何第三方提供您提供的联系信息。我们收集这些信息是为了调查事实与帮助您解决问题，如您拒绝提供，可能导致您无法使用我们的客服等用户响应机制。</span></p>
 
     <p class="MsoNormal"><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（四）改善我们的产品和服务</span></p>
 
@@ -314,8 +314,14 @@
 
     <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">我们已采取符合业界标准的安全防护措施保护您提供的个人信息，防止数据遭到未经授权访问、公开披露、使用、修改、损坏或丢失。我们会采取一切合理可行的措施，保护您的个人信息。<span lang="EN"><br>
 1. </span>我们会对可识别的个人身份信息进行加密传输和存储，以确保数据的保密性。对于您手机设备标识符国际移动设备身份码（<span lang="EN">IMEI</span>），我们在您的设备端会用<span lang="EN">MD5</span>算法进行匿名化和加密，并仅收集和上传经过匿名化和加密后的标识符。<span lang="EN"><br>
-2. </span>我们为工作人员定期举办个人信息保护相关法律法规培训，以加强工作人员的用户个人隐私保护意识。<span lang="EN"><br>
-3. </span>如果不幸发生我们的物理、技术或管理防护措施遭到破坏的事件，我们会及时启动应急预案，防止安全事件扩大，按照法律法规的要求上报国家主管机关，并及时采取推送、公告等合理、有效的方式向您告知安全事件的基本情况、可能的影响、已经采取的措施或将要采取的措施等。</span></p>
+2. </span>如果用户注册了</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">尚品-JR</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">账号，我们可能通过对</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">尚品-JR</span><span style="font-family:
+&quot;微软雅黑&quot;,&quot;sans-serif&quot;">用户的登录时间、<span lang="EN">IP</span>、登录次数等信息进行分析，妥善做好风控管理。如有疑似非本人登录操作的情况，我们将通过短信提醒用户，避免账户被非本人登录操作。对于您使用的手机与我们客户端之间的数据交换，我们采用了我们自定义的加密方案和<span lang="EN">https</span>双重加密的方式进行传输，以确保数据传输的安全性。<span lang="EN"><br>
+3. </span>若我们的应用采用了<span lang="EN">WebView</span>技术，我们会对在<span lang="EN">WebView</span>中使用的所有<span lang="EN">file</span>协议进行<span lang="EN">URL</span>校验且限制访问本应用敏感数据以及<span lang="EN">SDCard</span>数据，避免在无特殊权限的情况下</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">尚品-JR</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">产品的任意私有文件和敏感信息被恶意盗用，从而造成您的个人信息被泄露。<span lang="EN"><br>
+4. </span>我们在服务端部署访问控制机制，对可能接触到您个人信息的工作人员采取最小够用授权原则，并定期核查访问人员名单和访问记录。<span lang="EN"><br>
+5. </span>我们存储用户个人信息的服务器系统均为安全加固后的操作系统。我们会对服务器操作进行账户审计及监控。如果发现外部公告有安全问题的服务器操作系统，</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">尚品-JR</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">会在第一时间会进行服务器安全升级，确保</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">尚品-JR</span><span style="font-family:
+&quot;微软雅黑&quot;,&quot;sans-serif&quot;">所有服务器系统及应用安全。<span lang="EN"><br>
+6. </span>我们为工作人员定期举办个人信息保护相关法律法规培训，以加强工作人员的用户个人隐私保护意识。<span lang="EN"><br>
+7. </span>如果不幸发生我们的物理、技术或管理防护措施遭到破坏的事件，我们会及时启动应急预案，防止安全事件扩大，按照法律法规的要求上报国家主管机关，并及时采取推送、公告等合理、有效的方式向您告知安全事件的基本情况、可能的影响、已经采取的措施或将要采取的措施等。</span></p>
 
     <p class="MsoNormal"><b><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">六、您管理个人信息的权利</span></b></p>
 
@@ -335,6 +341,12 @@
 3. </span>我们违反了与您的约定来使用和处理您的个人信息。<span lang="EN"><br>
 5. </span>我们停止对您提供服务。<span lang="EN"><br>
 </span>您可以通过本隐私政策第九节提供的方式联系我们要求删除您的个人信息，我们会在<span lang="EN">15</span>个工作日内给予答复。当我们从服务器中删除您的个人信息后，我们可能不会立即从备份系统中删除相应的数据，但会在备份更新的时候删除这些信息。</span></p>
+
+    <p class="MsoNormal"><span lang="EN-US" style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">(</span><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">三）注销您的个人账号</span></p>
+
+    <p class="MsoNormal"><span style="color:red;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">您可以通过尚品-JR APP中 我的-设置-注销账号 流程进行账号注销，如果您选择注销账号，那么您的账号将不可被使用且相关账号信息将被删除，您将无法再通过账号登录尚品-JR的服务（但不会影响您使用无需账号登录即可使用的服务和功能）。您也可以联系尚品-JR的官方邮箱（youxtr836368@163.com）进行账号注销操作。</span></p>
+
+    <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">当您注销账号后，除法律法规要求我们保存相关信息的情况外，我们将停止为您提供相应的产品（或服务），并于<span lang="EN-US">10</span>个工作日内删除或匿名化您的个人信息。</span></p>
 
     <p class="MsoNormal"><b><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">七、未成年人个人信息保护</span></b></p>
 
@@ -487,10 +499,11 @@
     <p class="MsoNormal">
         如果您对我们的隐私政策及对您个人信息的处理有任何疑问、意见、建议或投诉，请通过以下方式与我们联系：<br>
         公司名称：湖北阳荣码网络科技有限公司<br>
+        公司地址：湖北省武汉市青山区和平大道与冶金大道交汇处印力中心写字楼15层1507<br>
         办公地址：湖北省武汉市青山区和平大道与冶金大道交汇处印力中心写字楼15层1507<br>
-        联系邮箱：zhongjin4568@163.com<br>
-        联系人：李中军<br>
-        联系电话：17565586537<br>
+        联系邮箱：youxtr836368@163.com<br>
+        联系人：王家俊<br>
+        联系电话：15865586537<br>
         在一般情况下，我们会在10个工作日内对您的请求予以答复。<br>
     </p>
     <p class="MsoNormal"><span lang="EN-US" style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">&nbsp;</span></p>
