--- a/fl/h90.html
+++ b/fl/h90.html
@@ -179,8 +179,8 @@
 
 <div class="WordSection1" style="layout-grid:15.6pt">
 
-    <p class="MsoNormal"><b><span style="font-size:14.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">发布日期：2025年09月21日</span></b></p>
-    <p class="MsoNormal"><b><span style="font-size:14.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">更新日期：2025年09月21日</span></b></p>
+    <p class="MsoNormal"><b><span style="font-size:14.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">发布日期：2025年09月20日</span></b></p>
+    <p class="MsoNormal"><b><span style="font-size:14.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">更新日期：2025年09月20日</span></b></p>
     <br>
     <br>
 
@@ -227,17 +227,7 @@
 
     <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">为了过滤您手机无法使用的软件，DHXY会收集您<b>手机的系统版本号、屏幕分辨率、运行内存、剩余存储空间信息，</b>并依据这些信息排除您手机无法使用的软件，以保证您在DHXY下载的软件都可安装使用。</span></p>
 
-
-    <p class="MsoNormal"><span style="color:red;font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（二）拍照和相册权限</span></p>
-
-    <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">为实现</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">DHXY</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">默认模版绘画和自定义模版绘画，我们需要<span lang="EN">/</span>获取相机权限和相册权限<b></b></span><b><span style="font-family:
-&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span></b><b><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">，</span></b><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">申请权限是为了帮助您完成</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">DHXY默认模版绘画和自定义模版绘画功能</span><span style="font-family:
-&quot;微软雅黑&quot;,&quot;sans-serif&quot;">此功能不会获取用户信息。</span><span style="font-family:
-&quot;微软雅黑&quot;,&quot;sans-serif&quot;">请放心使用。</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span><span lang="EN" style="font-family:
-&quot;微软雅黑&quot;,&quot;sans-serif&quot;">-</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span></p>
-
-
-    <p class="MsoNormal"><span style="color:red;font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（三）传感器列表权限</span></p>
+    <p class="MsoNormal"><span style="color:red;font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（二）传感器列表权限</span></p>
 
     <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">为实现</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">DHXY</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">实时计步的功能，我们需要<span lang="EN">/</span>获取传感器列表<b></b></span><b><span style="font-family:
 &quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span></b><b><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">，</span></b><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">收集这些信息是为了帮助您完成</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">DHXY计步功能</span><span style="font-family:
@@ -245,7 +235,7 @@
 &quot;微软雅黑&quot;,&quot;sans-serif&quot;">请放心使用。</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span><span lang="EN" style="font-family:
 &quot;微软雅黑&quot;,&quot;sans-serif&quot;">-</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span></p>
 
-    <p class="MsoNormal"><span style="color:red;font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（四）复制和粘贴版权限</span></p>
+    <p class="MsoNormal"><span style="color:red;font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（三）复制和粘贴版权限</span></p>
 
     <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">为实现</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">DHXY</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">复制颜色的功能，我们需要<span lang="EN">/</span>使用复制功能<b></b></span><b><span style="font-family:
 &quot;微软雅黑&quot;,&quot;sans-serif&quot;">和</span></b><b><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">粘贴板功能，</span></b><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">收集这些信息是为了帮助您完成</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">DHXY</span><span style="font-family:
@@ -254,15 +244,15 @@
 &quot;微软雅黑&quot;,&quot;sans-serif&quot;">-</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span></p>
 
 
-    <p class="MsoNormal"><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（五）改善我们的产品和服务</span></p>
+    <p class="MsoNormal"><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（四）改善我们的产品和服务</span></p>
 
     <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">我们会通过友盟SDK收集<b>经过<span lang="EN">MD5</span>算法加密的国际移动设备身份码（<span lang="EN">IMEI</span>），以及手机型号、手机系统版本号、屏幕分辨率、上网类型、手机中软件的名称、版本号、包名、软件使用时间和频率、软件崩溃日志</b>用于统计我们产品的用户数量、分析产品的使用状况、排查崩溃原因、减少崩溃情况，以不断改进我们的产品。这些信息不涉及到您的个人身份等隐私信息。</span></p>
 
-    <p class="MsoNormal"><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（六</span><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">）为您的安全提供保障</span></p>
+    <p class="MsoNormal"><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（五</span><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">）为您的安全提供保障</span></p>
 
     <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">为提高您使用我们及我们关联公司、合作伙伴提供服务的安全性，保护您或其他用户或公众的人身财产安全免遭侵害，更好地预防钓鱼网站、欺诈、网络漏洞、计算机病毒、网络攻击、网络侵入等安全风险，更准确地识别违反法律法规或</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">DHXY</span><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">相关协议规则的情况。<b>我们可能使用或整合您的账户信息、设备信息、软件使用信息以及我们关联公司、合作伙伴取得您授权或依据法律共享的信息，</b>用于进行身份验证、检测及防范安全事件，并依法采取必要的记录、审计、分析、处置措施。</span></p>
 
-    <p class="MsoNormal"><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（七</span><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">）其他</span></p>
+    <p class="MsoNormal"><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">（六</span><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;"></span><span style="font-size:12.0pt;font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">）其他</span></p>
 
     <p class="MsoNormal"><span style="font-family:&quot;微软雅黑&quot;,&quot;sans-serif&quot;">如上文所述，<b>如果某一需要收集您的个人信息的功能或产品<span lang="EN">/</span>服务未能在本《DHXY隐私政策》中予以说明的，或者我们超出了与收集您的个人信息时所声称的目的及具有直接或合理关联范围的，我们将在收集和使用你的个人信息前，通过更新本《DHXY隐私政策》、页面提示、弹窗、消息通知、网站公告或其他便于您获知的方式另行向您说明，并为您提供自主选择同意的方式，且在征得您明示同意后收集和使用。</b></span></p>
 
@@ -485,7 +475,7 @@
         公司名称：武汉市纵妍妍网络科技有限公司<br>
         办公地址：湖北省武汉市汉阳区滨江大道192号世茂锦绣长江C3地块一期8号楼1层20号（-543）<br>
         联系邮箱：zhongjin4568@163.com<br>
-        联系人：李云<br>
+        联系人：李中军<br>
         联系电话：17565586537<br>
         在一般情况下，我们会在10个工作日内对您的请求予以答复。<br>
     </p>
