--- a/fl/h105.html
+++ b/fl/h105.html
@@ -500,6 +500,34 @@
             <td
                     style="border-bottom-color:#000000; border-bottom-style:solid; border-bottom-width:0.75pt; border-left-color:#000000; border-left-style:solid; border-left-width:0.75pt; border-right-color:#000000; border-right-style:solid; border-right-width:0.75pt; border-top-color:#000000; border-top-style:solid; border-top-width:0.75pt; padding-left:5.03pt; padding-right:5.03pt; vertical-align:middle; width:95.7pt">
                 <p style="margin:0pt; text-align:center"><span
+                        style="background-color:#ffffff; font-family:微软雅黑; font-size:6.5pt; font-style:normal; text-transform:none">sqflite_release Flutter插件开发库</span>
+                </p>
+            </td>
+            <td
+                    style="border-bottom-color:#000000; border-bottom-style:solid; border-bottom-width:0.75pt; border-left-color:#000000; border-left-style:solid; border-left-width:0.75pt; border-right-color:#000000; border-right-style:solid; border-right-width:0.75pt; border-top-color:#000000; border-top-style:solid; border-top-width:0.75pt; padding-left:5.03pt; padding-right:5.03pt; vertical-align:middle; width:95.7pt">
+                <p style="margin:0pt"><span
+                        style="background-color:#ffffff; font-family:微软雅黑; font-size:6.5pt; font-style:normal; text-transform:none">提供强大的关系型数据库支持。它适用于高效的本地数据存储,支持复杂查询和事务处理,具备良好的性能和易用性,帮助开发者轻松管理应用中的数据</span><span
+                        style="background-color:#ffffff; font-family:微软雅黑; font-size:6.5pt; font-style:normal; text-transform:none"></span>
+                </p>
+            </td>
+            <td
+                    style="border-bottom-color:#000000; border-bottom-style:solid; border-bottom-width:0.75pt; border-left-color:#000000; border-left-style:solid; border-left-width:0.75pt; border-right-color:#000000; border-right-style:solid; border-right-width:0.75pt; border-top-color:#000000; border-top-style:solid; border-top-width:0.75pt; padding-left:5.03pt; padding-right:5.03pt; vertical-align:middle; width:95.75pt">
+                <p style="margin:0pt; text-align:center"><span
+                        style="background-color:#ffffff; font-family:微软雅黑; font-size:6.5pt; font-style:normal; text-transform:none;color:#f00;">获取设备序列号、MAC、IMSI、IMEI、存储的个人文件、读取手机状态和身份、网络信息</span>
+                </p>
+            </td>
+            <td
+                    style="border-bottom-color:#000000; border-bottom-style:solid; border-bottom-width:0.75pt; border-left-color:#000000; border-left-style:solid; border-left-width:0.75pt; border-right-color:#000000; border-right-style:solid; border-right-width:0.75pt; border-top-color:#000000; border-top-style:solid; border-top-width:0.75pt; padding-left:5.03pt; padding-right:5.03pt; vertical-align:middle; width:95.75pt">
+                <p style="margin:0pt"><span
+                        style="background-color:#ffffff; font-family:微软雅黑; font-size:6.5pt; font-style:normal; text-transform:none">Flutter团队</span>
+                </p>
+            </td>
+        </tr>
+
+ <tr>
+            <td
+                    style="border-bottom-color:#000000; border-bottom-style:solid; border-bottom-width:0.75pt; border-left-color:#000000; border-left-style:solid; border-left-width:0.75pt; border-right-color:#000000; border-right-style:solid; border-right-width:0.75pt; border-top-color:#000000; border-top-style:solid; border-top-width:0.75pt; padding-left:5.03pt; padding-right:5.03pt; vertical-align:middle; width:95.7pt">
+                <p style="margin:0pt; text-align:center"><span
                         style="background-color:#ffffff; font-family:微软雅黑; font-size:6.5pt; font-style:normal; text-transform:none">移动智能终端补充设备标识体</span>
                 </p>
             </td>
@@ -592,6 +620,34 @@
                     style="border-bottom-color:#000000; border-bottom-style:solid; border-bottom-width:0.75pt; border-left-color:#000000; border-left-style:solid; border-left-width:0.75pt; border-right-color:#000000; border-right-style:solid; border-right-width:0.75pt; border-top-color:#000000; border-top-style:solid; border-top-width:0.75pt; padding-left:5.03pt; padding-right:5.03pt; vertical-align:middle; width:95.7pt">
                 <p style="margin:0pt; text-align:center"><span
                         style="background-color:#ffffff; font-family:微软雅黑; font-size:6.5pt; font-style:normal; text-transform:none">个推SDK</span>
+                </p>
+            </td>
+            <td
+                    style="border-bottom-color:#000000; border-bottom-style:solid; border-bottom-width:0.75pt; border-left-color:#000000; border-left-style:solid; border-left-width:0.75pt; border-right-color:#000000; border-right-style:solid; border-right-width:0.75pt; border-top-color:#000000; border-top-style:solid; border-top-width:0.75pt; padding-left:5.03pt; padding-right:5.03pt; vertical-align:middle; width:95.7pt">
+                <p style="margin:0pt"><span
+                        style="background-color:#ffffff; font-family:微软雅黑; font-size:6.5pt; font-style:normal; text-transform:none">用于提供消息推送服务，确保您能及时收到聊天消息、语音通话和视频通话的通知</span><span
+                        style="background-color:#ffffff; font-family:微软雅黑; font-size:6.5pt; font-style:normal; text-transform:none">,群聊消息的推送通知</span>
+                </p>
+            </td>
+            <td
+                    style="border-bottom-color:#000000; border-bottom-style:solid; border-bottom-width:0.75pt; border-left-color:#000000; border-left-style:solid; border-left-width:0.75pt; border-right-color:#000000; border-right-style:solid; border-right-width:0.75pt; border-top-color:#000000; border-top-style:solid; border-top-width:0.75pt; padding-left:5.03pt; padding-right:5.03pt; vertical-align:middle; width:95.75pt">
+                <p style="margin:0pt; text-align:center"><span
+                        style="background-color:#ffffff; font-family:微软雅黑; font-size:6.5pt; font-style:normal; text-transform:none;color:#f00;">获取设备标识符（如IMEI、IDFA、SSID、BSSID、Wi-Fi SSID、Wi-Fi BSSID、Android ID、MAC、OAID等）、硬件序列号、应用安装列表、网络状态、手机型号、操作系统版本等设备信息</span>
+                </p>
+            </td>
+            <td
+                    style="border-bottom-color:#000000; border-bottom-style:solid; border-bottom-width:0.75pt; border-left-color:#000000; border-left-style:solid; border-left-width:0.75pt; border-right-color:#000000; border-right-style:solid; border-right-width:0.75pt; border-top-color:#000000; border-top-style:solid; border-top-width:0.75pt; padding-left:5.03pt; padding-right:5.03pt; vertical-align:middle; width:95.75pt">
+                <p style="margin:0pt"><span
+                        style="background-color:#ffffff; font-family:微软雅黑; font-size:6.5pt; font-style:normal; text-transform:none">浙江每日互动网络科技股份有限公司</span>
+                </p>
+            </td>
+        </tr>
+
+ <tr>
+            <td
+                    style="border-bottom-color:#000000; border-bottom-style:solid; border-bottom-width:0.75pt; border-left-color:#000000; border-left-style:solid; border-left-width:0.75pt; border-right-color:#000000; border-right-style:solid; border-right-width:0.75pt; border-top-color:#000000; border-top-style:solid; border-top-width:0.75pt; padding-left:5.03pt; padding-right:5.03pt; vertical-align:middle; width:95.7pt">
+                <p style="margin:0pt; text-align:center"><span
+                        style="background-color:#ffffff; font-family:微软雅黑; font-size:6.5pt; font-style:normal; text-transform:none">消息推送 SDK Android</span>
                 </p>
             </td>
             <td
